--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 .bar{
 	width: 100%;
 	font-size: 500%;
-	background: red;
+	background: rgb(255,0,0);
+	background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(0,0,0,1) 35%, rgba(0,0,0,1) 65%, rgba(255,0,0,1) 100%);
 	color: blue;
 }
 .marquee{
