--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 	width: 100%;
 	font-size: 500%;
 	background: rgb(255,0,0);
-	background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(0,0,0,1) 40%, rgba(0,0,0,1) 60%, rgba(255,0,0,1) 100%);
+	background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(0,0,0,1) 50%, rgba(255,0,0,1) 100%);
 	color: blue;
 }
 .marquee{
