--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 	background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(0,0,0,1) 50%, rgba(255,0,0,1) 100%);
 	color: blue;
 }
-.marquee{
+.welcome{
 	font-size: 200%;
 }
 #mylinks{
