--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 	background: rgb(255,0,0);
 	background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(0,0,0,1) 50%, rgba(255,0,0,1) 100%);
 	color: blue;
+	position: fixed;
 }
 .welcome{
 	font-size: 150%;
