--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 @font-face {
 	font-family: 'Comic Sans MS';
-	url('comic.woff') format('woff'), /* Modern Browsers */
-       	url('comic.ttf')  format('truetype'), /* Safari, Android, iOS */
+	src: url('comic.eot'); /* IE9 Compat Modes */
+ 	src: url('comic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       		url('comic.woff2') format('woff2'), /* Super Modern Browsers */
+       		url('comic.woff') format('woff'), /* Pretty Modern Browsers */
+       		url('comic.ttf')  format('truetype'), /* Safari, Android, iOS */
+       		url('comic.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 .bar{
 	width: 100%;
