--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
        		url('comic.woff2') format('woff2'), /* Super Modern Browsers */
        		url('comic.woff') format('woff'), /* Pretty Modern Browsers */
        		url('comic.ttf')  format('truetype'), /* Safari, Android, iOS */
+		url('comic.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 .bar{
 	width: 100%;
