--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @font-face {
 	font-family: 'Comic Sans MS';
-	src: url('./fonts/comic.eot'); /* IE9 Compat Modes */
- 	src: url('./fonts/comic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       		url('./fonts/comic.woff2') format('woff2'), /* Super Modern Browsers */
-       		url('./fonts/comic.woff') format('woff'), /* Pretty Modern Browsers */
-       		url('./fonts/comic.ttf')  format('truetype'), /* Safari, Android, iOS */
-		url('./fonts/comic.svg#svgFontName') format('svg'); /* Legacy iOS */
+	src: url('./assets/fonts/comic.eot'); /* IE9 Compat Modes */
+ 	src: url('./assets/fonts/comic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       		url('./assets/fonts/comic.woff2') format('woff2'), /* Super Modern Browsers */
+       		url('./assets/fonts/comic.woff') format('woff'), /* Pretty Modern Browsers */
+       		url('./assets/fonts/comic.ttf')  format('truetype'), /* Safari, Android, iOS */
+		url('./assets/fonts/comic.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 .bar{
 	width: 100%;
